deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordle-frontend-service
  namespace: default
  labels:
    app: wordle-frontend
spec:
  type: NodePort
  selector:
    app: wordle-frontend
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30000
